err/pylot-dojo.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pylot_dojo-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/src'...
Listing './lib/python3.5/site-packages/src/Pylot'...
Listing './lib/python3.5/site-packages/src/Pylot/app'...
Listing './lib/python3.5/site-packages/src/Pylot/app/config'...
Listing './lib/python3.5/site-packages/src/Pylot/app/controllers'...
Listing './lib/python3.5/site-packages/src/Pylot/app/models'...
Listing './lib/python3.5/site-packages/src/Pylot/system'...
Listing './lib/python3.5/site-packages/src/Pylot/system/core'...
Listing './lib/python3.5/site-packages/src/Pylot/system/db'...
Compiling './lib/python3.5/site-packages/src/Pylot/system/db/db_init.py'...
***   File "./lib/python3.5/site-packages/src/Pylot/system/db/db_init.py", line 29
    print 'is it going in here'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/src/Pylot/system/db/drivers'...
Listing './lib/python3.5/site-packages/src/Pylot/system/init'...
Compiling './lib/python3.5/site-packages/src/pylot.py'...
***   File "./lib/python3.5/site-packages/src/pylot.py", line 9
    print len(sys.argv)
            ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
